# beyond-compare-app

./: GAP_ANALYSIS.md  README.md  package.json  pnpm-lock.yaml  start-debug.bat  start.bat  vitest.config.ts
scripts/: install-context-menu.ps1  install-linux.sh  install-macos.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  nsis-installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: archive.rs  cli.rs  git.rs  lib.rs  main.rs  metadata.rs  remote.rs  snapshot.rs
src-tauri/tests/: archive_test.rs  git_test.rs  remote_test.rs
src/components/: AlignmentDialog.tsx  ArchiveDiffViewer.tsx  AudioDiffViewer.tsx  BinaryViewer.tsx  BookmarkPanel.tsx  CompareOptionsPanel.tsx  DiffStatsPanel.tsx  DiffViewer.tsx  DocumentCompare.tsx  EncodingInfo.tsx  EncodingSelector.tsx  FilePreviewPanel.tsx  FileSelector.tsx  FilterPanel.tsx  FolderDiffViewer.tsx  FolderSelector.tsx  FolderTree.tsx  GitHistoryPanel.tsx  GoToLineDialog.tsx  HistoryPanel.tsx  ImageDiffViewer.tsx  ImageStats.tsx  LineEndingConverter.tsx  Magnifier.tsx  MergeActions.tsx  RemoteConnectionPanel.tsx  SearchPanel.tsx  SnapshotPanel.tsx  SyncPanel.tsx  ThreeWayMerge.tsx  Toolbar.tsx
src/hooks/: useCompareOptions.ts  useFileWithEncoding.ts  useKeyboardShortcuts.ts  useLayoutMode.ts  useWordWrap.ts
src/types/: diff-match-patch.d.ts  index.ts
src/utils/: audioAnalysis.test.ts  audioAnalysis.ts  binaryCheck.test.ts  binaryCheck.ts  charDiff.test.ts  charDiff.ts  diff.test.ts  diff.ts  diff3.test.ts  diff3.ts  encoding.test.ts  encoding.ts  excelParser.ts  exportReport.test.ts  (+14 more)
