[package]
name = "beyond-compare"
version = "0.1.0"
description = "Beyond Compare - File and Folder Comparison Tool"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "beyond_compare_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
clap = { version = "4.5", features = ["derive"] }
diff = "0.1"
ssh2 = "0.9"  # SFTP/SSH support
suppaftp = "6"  # FTP support
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
base64 = "0.22"
sha2 = "0.10"  # For key fingerprint
